# claude-apps

docs/superpowers/plans/: 2026-05-22-videoeditor-foundation.md  2026-05-22-videoeditor-media-and-proxy.md  2026-05-23-videoeditor-timeline-core.md
docs/superpowers/specs/: 2026-05-22-video-editor-design.md
videoeditor/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
videoeditor/src/: App.svelte
videoeditor/src-tauri/: Cargo.toml  tauri.conf.json
videoeditor/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  media_repo.rs  paths.rs  project_io.rs  proxy_worker.rs  recent.rs
videoeditor/src-tauri/src/ffmpeg/: mod.rs  probe.rs  progress.rs  proxy.rs  thumbnails.rs  waveform.rs
videoeditor/src-tauri/src/model/: mod.rs  project.rs  timeline.rs  timeline_ops.rs  transition.rs
videoeditor/src-tauri/tests/: project_roundtrip.rs  proxy_worker_lifecycle.rs  recent_registry.rs  timeline_ops_integration.rs
videoeditor/src-tauri/tests/fixtures/projects/: empty_v1.vproj
videoeditor/src/lib/: ipc.ts  types.ts
videoeditor/src/lib/components/: ClipFilmstrip.svelte  ClipWaveform.svelte  Inspector.svelte  MediaPool.svelte  MenuBar.svelte  PaneLayout.svelte  PreviewPlayer.svelte  Timeline.svelte  TimelineClip.svelte  TimelineRuler.svelte  TimelineTrack.svelte
videoeditor/src/lib/dialogs/: NewProjectDialog.svelte  RecentProjectsDialog.svelte
videoeditor/src/styles/: global.css
videoeditor/tests/frontend/: ipc.test.ts  mediaStore.test.ts  playheadStore.test.ts  projectStore.test.ts  snap.test.ts  timelineStore.test.ts
(+6 files in other folders)
