[package]
name = "videoeditor"
version = "0.1.0"
description = "Linux desktop video editor"
authors = ["mthomas"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "videoeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
